--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,75 @@ input{
   border: 0;
 }
 /* Header Part End  */
+/* Our Popular Tours */
+.Tours{
+  width: 80%;
+  margin: 30px auto;
+  display: flex;
+  justify-content: space-between;
+}
+.text-tour{
+  width: 55%;
+}
+.text-tour h3{
+  color: #131318;
+  font-size: 40px;
+  font-weight: 800;
+}
+.text-tour p{
+  color: rgba(19, 19, 24, 0.70);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  padding-bottom: 10px;
+}
+.text-tour ul li{
+  color: rgba(19, 19, 24, 0.70);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  padding: 20px;
+}
+.tour-img{
+  width: 40%;
+}
+.tour-img img{
+  width: 100%;
+}
+.banner-text>.btn{
+  margin-top: 20px;
+}
+
+
+
+
+
 /* Media quari For Mobile devise */
 @media screen and (max-width:576px){
-  
+  .header_part,
+  .input-field,
+  .Tours{
+    flex-direction: column;
+  }
+  .banner-text h3{
+  color: #FFF;
+  font-size: 22px;
+  font-weight: 800;
+}
+.banner-text p{
+  font-size: 10px;
+}
+.banner-text{
+  padding-top: 5%;
+}
+.banner{
+  width: 90%;
+  margin: 20px auto;
+}
+.text-tour , .tour-img{
+  width: 90%;
+}
+.tour-img{
+  margin-top: 20px;
+}
 }
