--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,7 @@ input{
 /* Header Part End  */
 /* Our Popular Tours */
 .Tours{
-  width: 80%;
+  max-width: 1250px;
   margin: 30px auto;
   display: flex;
   justify-content: space-between;
@@ -164,9 +164,132 @@ input{
 .banner-text>.btn{
   margin-top: 20px;
 }
-
-
-
+/* Destination Part */
+.destination{
+  max-width: 1250px;
+  margin: 10px auto;
+}
+.destination-text h3{
+  color: #131318;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 800;
+}
+.destination-text p{
+  color: rgba(19, 19, 24, 0.70);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+.destination-img{
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+  grid-template-rows: repeat(3 , 1fr);
+  gap: 20px;
+}
+.destination-img img{
+  width: 100%;
+  height: 100%;
+}
+.contry-img-1{
+  grid-column: 1/ span 6;
+  grid-row: 1/ span 1;
+  position: relative;
+}
+.contry-name-1{
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  color: #FFF;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 800;
+}
+.contry-img-2{
+  grid-column: 7/ span 6;
+  grid-row: 1/ span 1;
+  position: relative;
+}
+.contry-name-2{
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  color: #FFF;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 800;
+}
+.contry-img-3{
+  grid-column: 1/ span 4;
+  grid-row: 2/ span 1;
+  position: relative;
+}
+.contry-name-3{
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  color: #FFF;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 800;
+}
+.contry-img-4{
+  grid-column: 5/ span 5;
+  grid-row: 2/ span 1;
+  position: relative;
+}
+.contry-name-4{
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  color: #FFF;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 800;
+}
+.contry-img-5{
+  grid-column: 10/ span 3;
+  grid-row: 2/ span 1;
+    position: relative;
+}
+.contry-name-5{
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  color: #FFF;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 800;
+}
+.contry-img-6{
+  grid-column: 1/ span 6;
+  grid-row: 3/ span 1;
+  position: relative;
+}
+.contry-name-6{
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  color: #FFF;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 800;
+}
+.contry-img-7{
+  grid-column: 7/ span 6;
+  grid-row: 3/ span 1;
+    position: relative;
+}
+.contry-name-7{
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  color: #FFF;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 800;
+}
 
 
 /* Media quari For Mobile devise */
@@ -193,8 +316,11 @@ input{
 }
 .text-tour , .tour-img{
   width: 90%;
+  margin: 20px auto;
 }
-.tour-img{
-  margin-top: 20px;
+
+.destination-img{
+  display: flex;
+  flex-direction: column;
 }
 }
