--- a/styles/style.css
+++ b/styles/style.css
@@ -386,14 +386,89 @@ input{
   gap: 30px;
 }
 /* Why Choose Us part End */
+/* Newsletter */
+.Newsletter{
+  max-width: 1250px;
+  margin: 20px auto;
+  display: flex;
+  justify-content: space-between;
+}
+.form h3{
+  color: #131318;
+  font-size: 24px;
+  font-weight: 800;
+}
+.form p{
+  color: #5A5A5D;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+.form input{
+  width: 393px;
+  height: 52px;
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  margin-bottom: 30px;
+}
+.form .btn-subs{
+  width: 393px;
+  height: 52px;
+  background: var(--common-color);
+  color: #FFF;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  border: 0;
+}
 
-
+.form{
+  width: 40%;
+  width: 474px;
+  height: 422px;
+  border-radius: 16px;
+  border: 1px solid #FF5400;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 30px;
+}
+.form-img{
+  width: 60%;
+  position: relative;
+}
+.img-text{
+  position: absolute;
+  width: 324px;
+  height: 120px;
+  border-radius: 16px;
+  background: #FF5400;
+  transform: rotate(-19.628deg);
+  padding: 20px;
+  right: 90px;
+  bottom: 60px;
+}
+.img-text h4{
+  color: #FFF;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+}
+.img-text h3{
+  color: #FFF;
+  font-size: 32px;
+  font-weight: 800;
+  text-align: center;
+}
+ /* Newsletter End */
+ 
 
 /* Media quari For Mobile devise */
 @media screen and (max-width:576px){
   .header_part,
   .input-field,
-  .Tours{
+  .Tours,
+  .Newsletter{
     flex-direction: column;
   }
   .banner-text h3{
@@ -407,9 +482,15 @@ input{
 .banner-text{
   padding-top: 5%;
 }
+.form,
+.form-img,
 .banner{
   width: 90%;
   margin: 20px auto;
+}
+.form-img img{
+width: 100%;
+margin: 10px auto;
 }
 .text-tour , .tour-img{
   width: 90%;
@@ -420,4 +501,11 @@ input{
   display: flex;
   flex-direction: column;
 }
+.img-text{
+  width: 300px;
+  height: 100px;
+  right: 20px;
+  bottom: 60px;
+}
+
 }
