--- a/styles/style.css
+++ b/styles/style.css
@@ -461,8 +461,56 @@ input{
   text-align: center;
 }
  /* Newsletter End */
- 
-
+ footer{
+  width: 100%;
+  height: 299px;
+  background: rgba(19, 19, 24, 0.05);
+ }
+.foot-title{
+  padding-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+.foot-title img{
+  width: 40px;
+  height: 45px;
+}
+ .foot-title h3{
+  color: #131318;
+  font-size: 32px;
+  font-weight: 800;
+ }
+.foot-title .travel{
+  color: #FF5400;
+  font-size: 32px;
+  font-weight: 800;
+}
+.icon p{
+  color: #5A5A5D;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  margin: 10px 10%;
+}
+.icon{
+  text-align: center;
+}
+.icon i{
+  padding: 20px;
+}
+.line{
+  width: 872px;
+  height: 1px;
+  display: block;
+  margin: 0 auto;
+}
+footer > p{
+  color: #131318;
+  font-size: 16px;
+  font-weight: 300; 
+  text-align: center;
+  margin-top: 20px;
+}
 /* Media quari For Mobile devise */
 @media screen and (max-width:576px){
   .header_part,
@@ -507,5 +555,7 @@ margin: 10px auto;
   right: 20px;
   bottom: 60px;
 }
-
+.line{
+  width: 522px;
+}
 }
